kqed_dev4/src/objects/ConvioSyncLog__c.object
<CustomObject>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ErrorDescription__c</fullName>
        <description>Error Description of given error by convio request.</description>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecordCount__c</fullName>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Convio Sync Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>ErrorDescription__c</columns>
        <columns>RecordCount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>ConvioSyncLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Convio Sync Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>